Fixed bug where model directory dropdown was offscreen. - Parent element of dropdown needs to be `position: relative` in order to get the correct viewport offset. The fix only manually in three locations. Needs a redesign.

--- a/web/model-manager.css
+++ b/web/model-manager.css
@@ -598,6 +598,11 @@
 }
 
 /* search dropdown */
+.model-manager .input-dropdown-container {
+    position: relative;
+}
+
+
 .model-manager .search-models {
     display: flex;
     flex: 1;
